# umsl-cmp-sci-4500-project-snapshot-2019-04-19

./: CMakeLists.txt
src/: log.c  log.h  logging.c  logging.h  logging_fmt.cpp  logging_fmt.h  main.c  service.c  service.h
